# kernel-robot

./: .dockerignore  .gitignore  Dockerfile  README-zh.md  README.md  build.sh  caozuo.txt  dev_docs.md  error_log.txt  pyproject.toml  run.sh
.marscode/: deviceInfo.json
MarvinDocker/: Dockerfile  build_container_ws.sh  run.sh
MarvinDocker/robotaction/: common.py  execution.py  robot_action.py  state_machine.py  watchers.py
MarvinDocker/robotaction/data/0519/: graph_info.json  task_pencilbag.yaml  test_pencilbag.yaml
MarvinDocker/robotaction/data/0626/: gift_m8_ego_0623.json  test_box.yaml
MarvinDocker/robotaction/data/tool/: graph_info.json  task.yaml  task_siglip.yaml  tool.yaml
MarvinDocker/robotaction/scripts/: pose_correct.py
MarvinDocker/ros2_ws/log/: latest_build
MarvinDocker/scripts/: StartAll.sh  build_ros.sh
mindbridge/models/config/: yolo-config.yaml
mindbridge/models/flowpose_dino/FlowPose/: README.md  args_kp.py
mindbridge/models/flowpose_dino/FlowPose-old/: .gitignore  args.py  configs.py  requirements.txt
mindbridge/models/siglip2-so400m-patch14-224/: README.md  config.json
mindbridge/siglip2_trainer/: __init__.py  augmentation.py  multiview_models.py
mindbridge/src/: MindBridgeClient.py  main.py
mindbridge/src/core/client/: InstanceSegment.py  __init__.py
mindbridge/src/core/config/: fastfoundation-config.yaml  flowpose-config.yaml  last-vit-config.yaml  paths.py  realsense-config.yaml  sam3-config.yaml  siglip-config.yaml  yolo-config.yaml
mindbridge/src/core/controller/: Controlcenter.py  FastFoundationController.py  FlowPoseController.py  InstanceSegController.py  LastvitController.py  RealSenseController.py  Sam3Controller.py  SiglipController.py  __init__.py
mindbridge/src/core/launch/: service_FastFoundation.py  service_FlowPose.py  service_InsenceSeg.py  service_Sam3.py  (+3 more)
mindbridge/src/fusion/: __init__.py  __main__.py  ui_client.py  ui_server.py
model/: facebookresearch_dinov2_main
scripts/: build_env.sh  start_service.sh  test_fastfoundation.sh  test_flowpose.sh  test_sam3.sh
tests/: realsense_s.py  test_fusion_result_publisher.py
(+343 files in other folders)
