[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mindbridge"
version = "0.1.0"
description = "MindBridge"
requires-python = ">=3.10"

[tool.hatch.envs.default]
type = "virtual"

[tool.hatch.envs.default.scripts]
test = "pytest tests/"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
